<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="arabicName"
            type="String" />

        <variable
            name="englishName"
            type="String" />

        <variable
            name="doOnLoginClick"
            type="kotlin.jvm.functions.Function0" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LogInActivity">

        <include
            android:id="@+id/footerLayout"
            arabicName="@{arabicName}"
            englishName="@{englishName}"
            layout="@layout/white_auth_shared_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintBottom_toTopOf="@id/user_name_input_layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginTop="@dimen/_70sdp"
            android:visibility="visible"
            android:imeOptions="actionSend|flagNoEnterAction"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:boxStrokeColor="@color/text_field_bd"
            app:boxStrokeErrorColor="@color/error"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:suffixTextAppearance="@style/AcmerRegularBlack"
            app:prefixTextAppearance="@style/AcmerRegularBlack"
            app:counterTextAppearance="@style/AcmerRegularBlack"
            app:helperTextTextAppearance="@style/AcmerRegularBlack"
            app:errorTextAppearance="@style/AcmerRegularBlack"
            app:errorEnabled="true"
            app:placeholderTextAppearance="@style/AcmerRegularBlack"
            app:placeholderTextColor="@color/text_field_bd"
            app:errorTextColor="@color/error"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/AcmerRegularBlack"
            app:hintTextColor="@color/text_field_bd"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footerLayout"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/password_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAppearance="@style/AcmerRegularBlack"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:visibility="visible"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:boxStrokeColor="@color/text_field_bd"
            app:boxStrokeErrorColor="@color/primary"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:errorEnabled="true"
            android:imeOptions="actionSend|flagNoEnterAction"
            app:errorTextColor="@color/error"
            app:placeholderTextAppearance="@style/AcmerRegularBlack"
            app:suffixTextAppearance="@style/AcmerRegularBlack"
            app:prefixTextAppearance="@style/AcmerRegularBlack"
            app:counterTextAppearance="@style/AcmerRegularBlack"
            app:helperTextTextAppearance="@style/AcmerRegularBlack"
            app:errorTextAppearance="@style/AcmerRegularBlack"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:hintTextAppearance="@style/AcmerRegularBlack"
            app:hintTextColor="@color/text_field_bd"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_input_layout"
            app:layout_constraintVertical_weight="0.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAppearance="@style/AcmerRegularBlack"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_60sdp"
            android:background="@drawable/login_drawable"
            android:onClick="@{()->doOnLoginClick.invoke()}"
            android:text="@string/login"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:textAppearance="@style/AcmerRegularOne"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>