<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollableRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.products.detail.ProductDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/Design_Vertical_Starter_GuidLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/Design_Left_Starter_GuidLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/Design_Right_Starter_GuidLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/unknownName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="back"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="@id/Design_Left_Starter_GuidLine"
                app:layout_constraintTop_toBottomOf="@id/Design_Vertical_Starter_GuidLine"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_details_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textAlignment="center"
                android:textAppearance="@style/Baloothambi2_bold"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_bt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_images_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:contentDescription="@android:string/unknownName"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_details_title_tv"
                tools:itemCount="3"
                tools:listitem="@layout/image_view_item" />

            <com.arindicatorview.ARIndicatorView
                android:id="@+id/ar_indicator"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:animate_indicator_scrubbing="true"
                app:indicator_animation="@anim/zoom_in"
                app:indicator_color="@android:color/darker_gray"
                app:indicator_scrubbing="true"
                app:indicator_size="15"
                app:layout_constraintBottom_toTopOf="@+id/product_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_images_banner"
                app:number_of_indicators="5"
                app:selected_color="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxEms="2"
                android:maxLines="2"
                android:textAppearance="@style/Baloothambi2_bold"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_images_banner"
                tools:text="Highlights
Unique Design: Slide Camera Cover to protect the camera from scratching, 0.2mm lifted bezel for camera protection." />


            <androidx.cardview.widget.CardView
                android:id="@+id/product_price_cv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#FAFAFB"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_title_tv">

                <TextView
                    android:id="@+id/product_price_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:maxLines="1"
                    android:text="@string/my_products"
                    android:textAppearance="@style/Baloothambi2_medium"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_14ssp"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textAppearance="@style/Baloothambi2_bold"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="@+id/product_description_tv"
                app:layout_constraintTop_toBottomOf="@+id/product_price_cv" />

            <TextView
                android:id="@+id/product_description_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="vertical"
                android:textAppearance="@style/Baloothambi2_medium"
                android:textColor="@color/whitegray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="Unique Design: Slide Camera Cover to protect the camera from scratching, 0.2mm lifted bezel for camera protection.
Unique Design: Slide Camera Cover to protect the camera from scratching, 0.2mm lifted bezel for camera protection.
Unique Design: Slide Camera Cover to protect the camera from scratching, 0.2mm lifted bezel for camera protection." />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>