<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.products.list.ProductsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Design_Vertical_Starter_GuidLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Design_Left_Starter_GuidLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Design_Right_Starter_GuidLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/WelcomeMessageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/helloMessage"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toStartOf="@id/Design_Right_Starter_GuidLine"
            app:layout_constraintStart_toEndOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toBottomOf="@id/Design_Vertical_Starter_GuidLine" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ReviewMessageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/happyReviewMessage"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textColor="#B0B3BA"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/Design_Right_Starter_GuidLine"
            app:layout_constraintStart_toEndOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toBottomOf="@id/WelcomeMessageTextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/FirstCardImageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:src="@drawable/card1_drawable"
            app:layout_constraintEnd_toEndOf="@id/Design_Right_Starter_GuidLine"
            app:layout_constraintStart_toStartOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toBottomOf="@id/ReviewMessageTextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/SecondCardImageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@drawable/card2_drawable"
            app:layout_constraintEnd_toEndOf="@id/Design_Right_Starter_GuidLine"
            app:layout_constraintStart_toStartOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toTopOf="@id/FirstCardImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ThirdCardImageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@drawable/card3_drawable"
            app:layout_constraintEnd_toEndOf="@id/Design_Right_Starter_GuidLine"

            app:layout_constraintStart_toStartOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toTopOf="@id/SecondCardImageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="@id/ThirdCardImageView"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/ThirdCardImageView"
            app:layout_constraintTop_toTopOf="@id/ThirdCardImageView"
            android:layout_marginStart="@dimen/_10sdp"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/user_iv"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/user_iv"
            app:layout_constraintEnd_toEndOf="@id/ThirdCardImageView"
            app:layout_constraintTop_toTopOf="@id/user_iv"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            tools:text="Mohammed Morse Morse El Sayed Morse"
            android:layout_marginHorizontal="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/user_iv"
            app:layout_constraintEnd_toEndOf="@id/ThirdCardImageView"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textColor="@color/weakwhite"
            android:textSize="@dimen/_18ssp"
            tools:text="mohammedmorsefcis@gmail.com"
            android:layout_marginHorizontal="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/user_iv"
            app:layout_constraintEnd_toEndOf="@id/ThirdCardImageView"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textColor="@color/weakwhite"
            android:textSize="@dimen/_18ssp"
            tools:text="01119551454"
            android:layout_marginHorizontal="@dimen/_20sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/WordsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Design_Right_Starter_GuidLine"
            app:layout_constraintStart_toStartOf="@id/Design_Left_Starter_GuidLine"
            app:layout_constraintTop_toBottomOf="@id/ThirdCardImageView"
            app:spanCount="1"
            tools:itemCount="10"
            tools:listitem="@layout/product_item" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/SortingFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:backgroundTint="#3E64FF"
            android:elevation="@dimen/_50sdp"
            android:ellipsize="marquee"
            android:outlineAmbientShadowColor="#553100"
            android:outlineSpotShadowColor="#422500"
            android:shadowColor="#573200"
            android:shadowRadius="50"
            android:text="@string/logout"
            android:textAppearance="@style/Baloothambi2_bold"
            android:textColor="@color/white"
            app:elevation="@dimen/_50sdp"
            app:icon="@drawable/ic_outlined_logout"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>